objects/SVMXC__Installed_Product__c.object
<CustomObject>
    <fields>
        <fullName>SVMXC__Installation_Notes__c</fullName>
        <description>Any technical information relevant for the service organization. This is normally supplied by field service engineers upon completion of installation</description>
        <inlineHelpText>Any technical information relevant for the service organization. This is normally supplied by field service engineers upon completion of installation</inlineHelpText>
        <label>Installation Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Last_Date_Shipped__c</fullName>
        <description>If this product was shipped multiple times, date of the most recent shipment. Multiple shipments are possible if the product is returned for depot repair or service</description>
        <inlineHelpText>If this product was shipped multiple times, date of the most recent shipment. Multiple shipments are possible if the product is returned for depot repair or service</inlineHelpText>
        <label>Last Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Latitude__c</fullName>
        <description>Address location north or south of the equator</description>
        <inlineHelpText>Address location north or south of the equator</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Longitude__c</fullName>
        <description>East west geographic coordinate measurement.</description>
        <inlineHelpText>East west geographic coordinate measurement.</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial/Lot number of the parent product in the installed product hierarchy. This is a lookup to an existing installed product record.</description>
        <inlineHelpText>Serial/Lot number of the parent product in the installed product hierarchy. This is a lookup to an existing installed product record.</inlineHelpText>
        <label>Parent</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipName>R00N70000001hzcgEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipName>Installed_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__ProductIQTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductIQ Template</label>
        <referenceTo>SVMXC__ProductIQTemplate__c</referenceTo>
        <relationshipLabel>Installed Products</relationshipLabel>
        <relationshipName>Installed_Products_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Name__c</fullName>
        <description>Name of the product associated with the Installed Product</description>
        <formula>SVMXC__Product__r.Name</formula>
        <inlineHelpText>Name of the product associated with the Installed Product</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the product. This is a lookup to an existing salesforce product record.</description>
        <inlineHelpText>Name of the product. This is a lookup to an existing salesforce product record.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>R00N70000001hzchEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sales_Order_Number__c</fullName>
        <description>Sales order reference (typically from the ERP application)</description>
        <inlineHelpText>Sales order reference (typically from the ERP application)</inlineHelpText>
        <label>Sales Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Serial_Lot_Number__c</fullName>
        <description>Unique identification of this product. This information is Required if the product’s tracking is Serialized or Lot/Batch Tracked in the product record</description>
        <inlineHelpText>Unique identification of this product. This information is Required if the product’s tracking is Serialized or Lot/Batch Tracked in the product record</inlineHelpText>
        <label>Serial/Lot Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_End_Date__c</fullName>
        <description>This field is used by Reverse Logistics Module. End date of the latest service contract/line for this installed product. Derived automatically upon creating/updating service contract</description>
        <label>Service Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_Exchange_Type__c</fullName>
        <description>This field is used by Reverse Logistics Module. Exchange type from the latest service contract/line for this installed product. Derived automatically upon creating/updating service contract</description>
        <label>Service Contract Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Exchange</fullName>
                </value>
                <value>
                    <fullName>Return Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used by Reverse Logistics Module. Reference to the latest service contract line for this installed product. Derived automatically upon creating/updating service contract</description>
        <label>Service Contract Line</label>
        <referenceTo>SVMXC__Service_Contract_Products__c</referenceTo>
        <relationshipLabel>Installed Products</relationshipLabel>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_Start_Date__c</fullName>
        <description>This field is used by Reverse Logistics Module. Start date of the latest service contract/line for this installed product. Derived automatically upon creating/updating service contract</description>
        <label>Service Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used by Reverse Logistics Module. Reference to the latest service contract for this installed product. Derived automatically upon creating/updating service contract</description>
        <label>Service Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Installed Products</relationshipLabel>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current physical location of the product. This is a lookup to an existing location record</description>
        <inlineHelpText>Current physical location of the product. This is a lookup to an existing site record</inlineHelpText>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipName>R00N70000001hzcqEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__State__c</fullName>
        <description>“State/Province” part of the physical location address</description>
        <inlineHelpText>“State/Province” part of the physical location address</inlineHelpText>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Status__c</fullName>
        <description>Current status of the installed product.</description>
        <inlineHelpText>Current status of the installed product.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Installed-TBD</fullName>
                    <default>true</default>
                    <label>Installed-TBD</label>
                </value>
                <value>
                    <fullName>Deinstalled</fullName>
                </value>
                <value>
                    <fullName>Installed-Loan/Demo</fullName>
                </value>
                <value>
                    <fullName>Installed-Lease</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>In-Transit-Return</fullName>
                </value>
                <value>
                    <fullName>Scrap</fullName>
                </value>
                <value>
                    <fullName>Incoming</fullName>
                </value>
                <value>
                    <fullName>Burn-in</fullName>
                </value>
                <value>
                    <fullName>Post Burn-in</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Off Maintenance</fullName>
                </value>
                <value>
                    <fullName>Installed-Purchase</fullName>
                </value>
                <value>
                    <fullName>HSV Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Street__c</fullName>
        <description>“Street” part of the physical location address</description>
        <inlineHelpText>“Street” part of the physical location address</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sub_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Location</label>
        <referenceTo>SVMXC__Sub_Location__c</referenceTo>
        <relationshipLabel>Installed Products</relationshipLabel>
        <relationshipName>Installed_Products_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Top_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial/Lot number of the top-most product in the installed product hierarchy.</description>
        <inlineHelpText>This is a Link to the Master Installed Product record.</inlineHelpText>
        <label>Top-Level</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipName>R00N70000001hzcvEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty_End_Date__c</fullName>
        <description>This field is used by Reverse Logistics Module. End date of the latest warranty for this installed product. Derived automatically upon creating/updating warranty</description>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty_Exchange_Type__c</fullName>
        <description>This field is used by Reverse Logistics Module. Exchange type from the latest warranty for this installed product. Derived automatically upon creating/updating warranty</description>
        <label>Warranty Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Exchange</fullName>
                </value>
                <value>
                    <fullName>Return Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty_Start_Date__c</fullName>
        <description>This field is used by Reverse Logistics Module. Start date of the latest warranty for this installed product. Derived automatically upon creating/updating warranty</description>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty__c</fullName>
        <label>Warranty</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Zip__c</fullName>
        <description>“Zip/Postal Code” part of the physical location address</description>
        <inlineHelpText>“Zip/Postal Code” part of the physical location address</inlineHelpText>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_Last_Installed_Date__c</fullName>
        <description>This date field is used to store the last installed date of the installed product</description>
        <label>Last Installed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMX_Last_Operational_Hours__c</fullName>
        <label>Last Operational Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMX_Last_Uninstalled_Date__c</fullName>
        <description>This date field is used to store the last uninstalled date of the installed product</description>
        <label>Last Uninstalled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMX_MD_Serial_Number__c</fullName>
        <description>Unique serial number field that is used to prevent duplicate IPs from being adding to the database by throwing a duplicate error message.</description>
        <label>Dup Serial Number Check</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SVMX_Total_Operation_Hours__c</fullName>
        <description>Total operational hours of the Installed product in Installed status</description>
        <formula>SVMX_Last_Operational_Hours__c+If(OR(SVMX_Last_Installed_Date__c&gt;SVMX_Last_Uninstalled_Date__c, ISNULL(SVMX_Last_Uninstalled_Date__c)),(NOW()-SVMX_Last_Installed_Date__c) * 24,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Operation Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line_Number__c</fullName>
        <description>This is used to track the sales order line number for return parts.</description>
        <label>Sales Order Line Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Notes__c</fullName>
        <description>notes/comments such as a date it was converted from a loaner to a sale</description>
        <inlineHelpText>Notes/Comments: EX. date it was converted from a loaner to a sale</inlineHelpText>
        <label>Sales Order Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Notes__c</fullName>
        <description>This field will be used to record any special or unusual system configurations, misc site notes, etc</description>
        <inlineHelpText>This field will be used to record any special or unusual system configurations, misc site notes, etc</inlineHelpText>
        <label>Special Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject - to be completed when creating a Case from the Installed Product &quot;Production Test Case&quot; SFM.</description>
        <inlineHelpText>Subject - to be completed when creating a Case from the Installed Product &quot;Production Test Case&quot; SFM.</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Level__c</fullName>
        <description>Select the system level</description>
        <inlineHelpText>Select the system level</inlineHelpText>
        <label>System Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UXE 14.1.0</fullName>
                </value>
                <value>
                    <fullName>UXE 14.1.1</fullName>
                </value>
                <value>
                    <fullName>UXE 15.1.0</fullName>
                </value>
                <value>
                    <fullName>UXE 15.1.1</fullName>
                </value>
                <value>
                    <fullName>UXE 16.1.0</fullName>
                </value>
                <value>
                    <fullName>VXE 15.1.0</fullName>
                </value>
                <value>
                    <fullName>VXE 15.1.1</fullName>
                </value>
                <value>
                    <fullName>VXE 16.1.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Type__c</fullName>
        <label>System Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>PD II</fullName>
                </value>
                <value>
                    <fullName>PD III</fullName>
                </value>
                <value>
                    <fullName>PXPI GXL</fullName>
                </value>
                <value>
                    <fullName>PXPII GXL</fullName>
                </value>
                <value>
                    <fullName>PXPII XL</fullName>
                </value>
                <value>
                    <fullName>PXPI XL</fullName>
                </value>
                <value>
                    <fullName>Z1 GXL</fullName>
                </value>
                <value>
                    <fullName>Z1 XL</fullName>
                </value>
                <value>
                    <fullName>S1</fullName>
                </value>
                <value>
                    <fullName>RPP2</fullName>
                </value>
                <value>
                    <fullName>SPBR</fullName>
                </value>
                <value>
                    <fullName>RPP</fullName>
                </value>
                <value>
                    <fullName>Z1</fullName>
                </value>
                <value>
                    <fullName>PXPII</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>S1+</fullName>
                </value>
                <value>
                    <fullName>PXP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tentative_Ship_Date__c</fullName>
        <label>Tentative Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UMC_PN_Rev__c</fullName>
        <label>UMC PN/Rev</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Improved Alignment</fullName>
                </value>
                <value>
                    <fullName>Notched Backshell</fullName>
                </value>
                <value>
                    <fullName>25-12974 – Joy</fullName>
                </value>
                <value>
                    <fullName>25-11094  - Old</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upgrade_Date__c</fullName>
        <description>FSE will use this to update the date whenever the system is upgraded.</description>
        <label>Upgrade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>of_DCC_s_Rev__c</fullName>
        <label>#  of DCC&apos;s &amp; Rev</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_UMC_s_Rev__c</fullName>
        <label>Product revision as built</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Installed Product</label>
    <listViews>
        <fullName>FS_Management_Installed_Product</fullName>
        <filterScope>Queue</filterScope>
        <label>FS Management</label>
        <queue>FS_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Field_Service_FSR_Queue_Installed_Product</fullName>
        <filterScope>Queue</filterScope>
        <label>Field Service FSR Queue</label>
        <queue>Field_Service_FSR_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OM_FSR_Queue_Installed_Product</fullName>
        <filterScope>Queue</filterScope>
        <label>OM FSR Queue</label>
        <queue>OM_FSR_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SVMXC__All_Installed_Products</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Product_Name__c</columns>
        <columns>SVMXC__Parent__c</columns>
        <columns>SVMXC__Serial_Lot_Number__c</columns>
        <columns>SVMXC__Company__c</columns>
        <columns>SVMXC__Contact__c</columns>
        <columns>SVMXC__Date_Shipped__c</columns>
        <columns>Host_Name__c</columns>
        <columns>SVMXC__Date_Installed__c</columns>
        <columns>SVMXC__Status__c</columns>
        <columns>SVMXC__Street__c</columns>
        <columns>SVMXC__Country__c</columns>
        <columns>Logic_Board_SN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Installed Products</label>
    </listViews>
    <listViews>
        <fullName>SVMX_Sales_Finance_Team_Installed_Product</fullName>
        <filterScope>Queue</filterScope>
        <label>SVMX Sales Finance Team</label>
        <queue>SVMX_Sales_Finance_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Installed Product ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installed Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Can_not_move_the_IP_to_Installed_Status</fullName>
        <active>true</active>
        <description>The FSE will not be allowed to move the Installed Product status to Installed if the location is Cadence Temporary Location</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &apos;Integration&apos; ,
OR( $Profile.Name = &apos;ServiceMax Admin&apos;,
$Profile.Name = &apos;ServiceMax Service User&apos;
),
SVMXC__Site__r.Name = &apos;Cadence Temporary Location&apos; ,
OR( ISPICKVAL(SVMXC__Status__c , &apos;Installed-Purchase&apos;), 
ISPICKVAL(SVMXC__Status__c , &apos;Installed-Lease&apos;)),
CONTAINS( SVMXC__Product_Name__c , &apos;Palladium ES&apos;) 
)</errorConditionFormula>
        <errorDisplayField>SVMXC__Site__c</errorDisplayField>
        <errorMessage>Please update the location to the real location this Installed Product is installed at.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_Installed_Product</fullName>
        <active>true</active>
        <description>Cannot edit Installed Product if Status is either Deinstalled, Scrap, Closed or Off Maintenance</description>
        <errorConditionFormula>AND(
    NOT( ISNEW() ),
    OR(ISPICKVAL(PRIORVALUE(SVMXC__Status__c), &apos;Deinstalled&apos;),
       ISPICKVAL(PRIORVALUE(SVMXC__Status__c), &apos;Scrap&apos;),
       ISPICKVAL(PRIORVALUE(SVMXC__Status__c), &apos;Closed&apos;),
       ISPICKVAL(PRIORVALUE(SVMXC__Status__c), &apos;Off Maintenance&apos;)
    ),
    OR(ISPICKVAL(SVMXC__Status__c, &apos;Deinstalled&apos;),
       ISPICKVAL(SVMXC__Status__c, &apos;Scrap&apos;),
       ISPICKVAL(SVMXC__Status__c, &apos;Closed&apos;),
       ISPICKVAL(SVMXC__Status__c, &apos;Off Maintenance&apos;)
    )
)</errorConditionFormula>
        <errorDisplayField>SVMXC__Status__c</errorDisplayField>
        <errorMessage>Installed Product cannot be edited when status is Deinstalled, Scrap, Closed or Off Maintenance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Installed_required_for_Installed_IP</fullName>
        <active>false</active>
        <description>Date Installed must be set before moving the Installed Product status to Installed</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &apos;Integration&apos; , 
OR( $Profile.Name = &apos;ServiceMax Admin&apos;, 
$Profile.Name = &apos;ServiceMax Service User&apos; 
), 
ISBLANK( Install_Release_Date__c ) , 
OR( ISPICKVAL(SVMXC__Status__c , &apos;Installed-Purchase&apos;), 
ISPICKVAL(SVMXC__Status__c , &apos;Installed-Lease&apos;)) 
)</errorConditionFormula>
        <errorDisplayField>Install_Release_Date__c</errorDisplayField>
        <errorMessage>Please set the Install Release Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Required_for_Host_OS_Other_value</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(  $Profile.Name = &apos;ServiceMax Admin&apos;, 
           $Profile.Name = &apos;ServiceMax Service User&apos; ),
    ISPICKVAL(Host_OS__c, &apos;Other&apos;),
    ISBLANK(Other__c)
)</errorConditionFormula>
        <errorDisplayField>Other__c</errorDisplayField>
        <errorMessage>Please enter value in Other if Host OS contains &quot;Other&quot; value.</errorMessage>
    </validationRules>
</CustomObject>